# multi-repo-agentic-workflow

./: .gitignore  README.md  docker-compose.yaml  instructions.md  pyproject.toml
src/portfolio_manager/: __main__.py  config.py  db.py  github_ops.py  logging_setup.py  orchestrator.py  readme_llm.py  repo_context.py
src/portfolio_manager/workflows/: readme_pipeline.py
tests/: test_import.py
